--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
 body {
   font-family: sans-serif;
   font-size: 20px;
+  margin-left: 2em;
 }
 
-ul {
-  list-style-type: none;
-  padding-left: 0;
+p {
+  margin: 0;
 }
 
-li {
+.list {
+  margin-top: 1em;
+}
+
+.todo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #eee;
   margin-bottom: 0.5em;
   width: 13em;
