--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #ecf0f1;
+}
+
 body {
   font-family: sans-serif;
   font-size: 20px;
@@ -8,6 +12,11 @@ p {
   margin: 0;
 }
 
+span {
+  background-color: #e74c3c;
+  padding: 0.25em;
+}
+
 .list {
   margin-top: 1em;
 }
@@ -16,7 +25,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #eee;
+  background-color: #27ae60;
   margin-bottom: 0.5em;
   width: 13em;
   padding: 0.5em;
