--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ p {
 
 span {
   background-color: #e74c3c;
+  width: 23px;
+  height: 23px;
+  text-align: center;
+  border-radius: 4px;
   padding: 0.25em;
 }
 
@@ -29,6 +33,7 @@ span {
   margin-bottom: 0.5em;
   width: 13em;
   padding: 0.5em;
+  border-radius: 4px;
 }
 
 .done {
