--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ span {
   text-align: center;
   border-radius: 4px;
   padding: 0.25em;
+  border: 1px solid #555;
 }
 
 .list {
@@ -34,6 +35,7 @@ span {
   width: 13em;
   padding: 0.5em;
   border-radius: 4px;
+  box-shadow: 2px 2px 2px 2px #ccc;
 }
 
 .done {
